Fixed Horizontal Scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&family=Inter:wght@100&family=Maven+Pro:wght@400;500&family=NTR&family=Outfit:wght@100&family=Rajdhani:wght@400;500&family=Roboto+Condensed:wght@300;400&family=Roboto+Mono:wght@300;400;500;600&family=Rubik:wght@400;500;600&family=Source+Code+Pro:wght@300;400&family=Space+Mono&display=swap');
-* {
 
-  box-sizing: border-box;
-}
 
 html {
   scroll-behavior: smooth;
-  max-width: 100%;
+  width: 100%;
+  overflow-x: hidden;
+
   
 }
 
@@ -38,7 +37,7 @@ section {
 
 
 body {
-  overflow: auto;
+  overflow-x: hidden;
   color: var(--color-slate);
   line-height: 1.7;
   display: block;
@@ -47,6 +46,8 @@ body {
   padding: 0;
   background: var(--color-bg);
 }
+
+
 
 
 @keyframes fadeInUp {
